src/objects/Product2/fields/Related_process__c.field-meta.xml
<CustomField>
    <fullName>Related_process__c</fullName>
    <inlineHelpText>Which Rapid process is this module related to?</inlineHelpText>
    <label>Related process</label>
    <length>50</length>
    <type>Text</type>
</CustomField>