src/objects/Product2/fields/Version_released_in__c.field-meta.xml
<CustomField>
    <fullName>Version_released_in__c</fullName>
    <inlineHelpText>Which version was this module released in?</inlineHelpText>
    <label>Version released in</label>
    <length>50</length>
    <type>Text</type>
</CustomField>